# XGDTool

./: .gitignore  .gitmodules  ATTRIBUTION.md  ATTRIBUTION.txt  CMakeLists.txt  README.md
cmake/: embed_resources.cmake  setup_vcpkg.cmake
resources/: resource.rc
src/: XGD.h  XGDException.cpp  XGDException.h  XGDLog.cpp  XGDLog.h  main.cpp
src/AvlTree/: AvlIterator.cpp  AvlIterator.h  AvlTree.cpp  AvlTree.h  AvlTree_Calculate.cpp  AvlTree_Create.cpp  AvlTree_Traverse.cpp
src/Common/: EndianUtils.cpp  IOUtils.cpp  IOUtils.h  StringUtils.cpp  Utils.h
src/ExeTool/: ExeTool.cpp  ExeTool.h
src/Executable/: AttachXbe.h  AttachXbeTool.cpp  AttachXbeTool.h  ExeTool.cpp  ExeTool.h
src/Formats/: CCI.h  CSO.h  GoD.h  Xbe.h  Xex.h  Xiso.cpp  Xiso.h
src/GUI/: MainFrame.cpp  MainFrame.h  MainFrame_Create.cpp  MainFrame_Log.cpp
src/ImageExtractor/: ImageExtractor.cpp  ImageExtractor.h
src/ImageReader/: ImageReader.cpp  ImageReader.h
src/ImageReader/CCIReader/: CCIReader.cpp  CCIReader.h
src/ImageReader/CSOReader/: CSOReader.cpp  CSOReader.h
src/ImageReader/GoDReader/: GoDReader.cpp  GoDReader.h
src/ImageReader/XisoReader/: XisoReader.cpp  XisoReader.h
src/ImageReader/ZARReader/: ZARReader.cpp  ZARReader.h
src/ImageWriter/: ImageWriter.cpp  ImageWriter.h
src/ImageWriter/CCIWriter/: CCIWriter.cpp  CCIWriter.h
src/ImageWriter/CSOWriter/: CSOWriter.cpp  CSOWriter.h
src/ImageWriter/GoDWriter/: GoDWriter.cpp  GoDWriter.h  GoD_live_header.h
src/ImageWriter/XisoWriter/: XisoWriter.cpp  XisoWriter.h
src/ImageWriter/ZARWriter/: ZARWriter.cpp  ZARWriter.h
src/InputHelper/: InputHelper.cpp  InputHelper.h  InputHelper_FS.cpp  Types.h
src/SplitFStream/: SplitFStream.h  SplitIFStream.cpp  SplitOFStream.cpp
src/Tests/: Tests.cpp  Tests.h
src/TitleHelper/: TitleHelper.cpp  TitleHelper.h
src/UnityTool/: UnityTool.cpp  UnityTool.h
src/Utils/: EndianUtils.cpp  EndianUtils.h  StringUtils.cpp  StringUtils.h
src/ZARExtractor/: ZARExtractor.cpp  ZARExtractor.h
